--- a/model/Dep_model.ipynb
+++ b/model/Dep_model.ipynb
@@ -323,22 +323,22 @@
    "metadata": {},
    "source": [
     "<ul>\n",
-    "    <li>country</li>\n",
-    "    <li>source</li>\n",
-    "    <li>introelapse--->The time spent on the introduction/landing page</li>\n",
-    "    <li>testelapse--->The time spent on all the DASS questions</li>\n",
-    "    <li>surveyelapse--->The time spent answering the rest of the demographic and survey questions</li>\n",
-    "    <li>urban</li>\n",
-    "    <li>engnat</li>\n",
-    "    <li>screensize</li>\n",
-    "    <li>uniquenetworklocation</li>\n",
-    "    <li>hand</li>\n",
-    "    <li>religion</li>\n",
-    "    <li>orientation</li>\n",
-    "    <li>race</li>\n",
-    "    <li>voted</li>\n",
-    "    <li>familysize</li>\n",
-    "    <li>major</li>\n",
+    "    <li>country ---> ISO country code of where the user connected from</li>\n",
+    "    <li>source ---> How the user found the test</li>\n",
+    "    <li>introelapse ---> The time spent on the introduction/landing page</li>\n",
+    "    <li>testelapse ---> The time spent on all the DASS questions</li>\n",
+    "    <li>surveyelapse ---> The time spent answering the rest of the demographic and survey questions</li>\n",
+    "    <li>urban ---> What type of area did you live when you were a child?</li>\n",
+    "    <li>engnat ---> Is English your native language?</li>\n",
+    "    <li>screensize ---> What is your device screen size</li>\n",
+    "    <li>uniquenetworklocation ---> What is the network of this user?</li>\n",
+    "    <li>hand ---> What hand do you use to write with?</li>\n",
+    "    <li>religion ---> What is your religion?</li>\n",
+    "    <li>orientation ---> What is your sexual orientation?</li>\n",
+    "    <li>race ---> What is your race?</li>\n",
+    "    <li>voted ---> Have you voted in a national election in the past year?</li>\n",
+    "    <li>familysize ---> Including you, how many children did your mother have?</li>\n",
+    "    <li>major---> If you attended a university, what was your major (e.g. \"psychology\", \"English\", \"civil engineering\")?</li>\n",
     "</ul>"
    ]
   },
